--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "react-native-react-native-roll-picker",
+  "name": "react-native-roll-picker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index",
+  "source": "src/index",
   "scripts": {
+    "prepare": "bob build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +27,22 @@
     "react-native": "0.69.4"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.70.8",
     "typescript": "^4.9.3"
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
