--- a/package.json
+++ b/package.json
@@ -1,35 +1,140 @@
 {
-  "name": "react-native-roll-picker",
-  "version": "1.0.0",
+  "name": "react-native-roller-picker",
+  "version": "1.0.11",
   "description": "",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
+  "files": [
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "react-native-picky.podspec",
+    "!lib/typescript/example",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
   "scripts": {
+    "test": "jest",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "release": "release-it",
+    "example": "yarn --cwd example",
+    "pods": "cd example && pod-install --quiet",
+    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "ios",
+    "android",
+    "picker",
+    "wheel"
   ],
-  "author": "",
-  "license": "",
+  "repository": "https://github.com/Liamandrew/react-native-picky",
+  "author": "Liam Andrew <liam.e.andrew@gmail.com> (https://github.com/Liamandrew)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Liamandrew/react-native-picky/issues"
+  },
+  "homepage": "https://github.com/Liamandrew/react-native-picky#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^11.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@release-it/conventional-changelog": "^2.0.0",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "0.67.7",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^28.1.1",
+    "commitlint": "^11.0.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^6.0.0",
+    "jest": "^26.0.1",
+    "pod-install": "^0.1.0",
+    "prettier": "^2.0.5",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-builder-bob": "^0.18.2",
+    "react-test-renderer": "^17.0.2",
+    "release-it": "^14.2.2",
+    "typescript": "^4.4.4"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
   },
-  "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
-    "react": "^18.2.0",
-    "react-native": "0.69.4"
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
   },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-native": "^0.70.8",
-    "typescript": "^4.9.3"
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
+  "prettier": {
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false
   },
   "react-native-builder-bob": {
     "source": "src",
