--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.69.4",
-    "react-native-picky": "^0.4.0"
+    "react-native-picky": "^0.4.0",
+    "react-native-roller-picker": "^1.0.25"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
